force-app/main/default/objects/CalloutAPI__mdt/CalloutAPI__mdt.object-meta.xml
<CustomObject>
    <label>CalloutAPI</label>
    <pluralLabel>CalloutAPIs</pluralLabel>
</CustomObject>