force-app/main/default/objects/CalloutAPI__mdt/fields/ActionURI__c.field-meta.xml
<CustomField>
    <fullName>ActionURI__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>