force-app/main/default/objects/CalloutAPI__mdt/fields/APIKey__c.field-meta.xml
<CustomField>
    <fullName>APIKey__c</fullName>
    <label>APIKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>