force-app/main/default/objects/CalloutAPI__mdt/fields/CalloutClassName__c.field-meta.xml
<CustomField>
    <fullName>CalloutClassName__c</fullName>
    <label>CalloutClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>