force-app/main/default/objects/CalloutAPI__mdt/fields/TimeOutLimit__c.field-meta.xml
<CustomField>
    <fullName>TimeOutLimit__c</fullName>
    <label>TimeOutLimit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>